<resources>
    <string name="app_name">BelajarAndroidProgrammingMaster4</string>
    <string name="segitiga">Segitiga</string>
    <string name="persegi">Persegi</string>
    <string name="persegipanjang">Persegi Panjang</string>
    <string name="lk">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="pilihJK">Pilih jenis kelamin</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
